--- a/index.html
+++ b/index.html
@@ -33,6 +33,25 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <div class="platforms">
+    <button class="platform-btn">
+      <img src="icons/android.svg" alt="Android" class="icon">
+      Android
+    </button>
+    <button class="platform-btn">
+      <img src="icons/windows.svg" alt="Windows" class="icon">
+      Windows
+    </button>
+    <button class="platform-btn">
+      <img src="icons/apple.svg" alt="macOS" class="icon">
+      MacOS
+    </button>
+    <button class="platform-btn">
+      <img src="icons/web.svg" alt="Web" class="icon">
+      Web
+    </button>
+  </div>
 </body>
+
 </html>
+
