--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
+  <link rel="stylesheet" href="style.css">
+
   <base href="/sonar_web/">
 
   <meta charset="UTF-8">
@@ -56,6 +58,7 @@
 </body>
 
 </html>
+
 
 
 
