--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 
   <base href="/sonar_web/">
@@ -37,6 +39,9 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <h1 class="main-title">Sonar App</h1>
+<p class="subtitle">All platforms — one click away</p>
+
   <div class="platforms">
     <button class="platform-btn">
       <img src="icons/android.svg" alt="Android" class="icon">
@@ -58,6 +63,7 @@
 </body>
 
 </html>
+
 
 
 
