--- a/index.html
+++ b/index.html
@@ -39,30 +39,35 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <h1 class="main-title">Sonar App</h1>
-    <p class="subtitle">All platforms — one click away</p>
-
-  <div class="platforms">
-    <button class="platform-btn">
-      <img src="icons/android.svg" alt="Android" class="icon">
-      Android
-    </button>
-    <button class="platform-btn">
-      <img src="icons/windows.svg" alt="Windows" class="icon">
-      Windows
-    </button>
-    <button class="platform-btn">
-      <img src="icons/apple.svg" alt="macOS" class="icon">
-      MacOS
-    </button>
-    <button class="platform-btn">
-      <img src="icons/web.svg" alt="Web" class="icon">
-      Web
-    </button>
+  <div class="center-content">
+    <div class="left-block">
+      <h1 class="main-title">Sonar App</h1>
+      <p class="subtitle">All platforms — one click away</p>
+    </div>
+    <div class="platforms">
+      <button class="platform-btn">
+        <img src="icons/android.svg" alt="Android" class="icon">
+        Android
+      </button>
+      <button class="platform-btn">
+        <img src="icons/windows.svg" alt="Windows" class="icon">
+        Windows
+      </button>
+      <button class="platform-btn">
+        <img src="icons/apple.svg" alt="MacOS" class="icon">
+        MacOS
+      </button>
+      <button class="platform-btn">
+        <img src="icons/web.svg" alt="Web" class="icon">
+        Web
+      </button>
+    </div>
   </div>
 </body>
 
+
 </html>
+
 
 
 
