--- a/index.html
+++ b/index.html
@@ -45,28 +45,30 @@
       <p class="subtitle">All platforms — one click away</p>
     </div>
     <div class="platforms">
-      <button class="platform-btn">
+      <a href="https://github.com/fridgeee1029/sonar/raw/main/android/sonar_app.apk" class="platform-btn" download>
         <img src="icons/android.svg" alt="Android" class="icon">
         Android
-      </button>
-      <button class="platform-btn">
+      </a>
+      <a href="https://github.com/fridgeee1029/sonar/raw/main/windows/sonar_app_windows.exe" class="platform-btn" download>
         <img src="icons/windows.svg" alt="Windows" class="icon">
         Windows
-      </button>
-      <button class="platform-btn">
+      </a>
+      <a href="https://github.com/fridgeee1029/sonar/raw/main/macos/sonar_app_macos.dmg" class="platform-btn" download>
         <img src="icons/apple.svg" alt="MacOS" class="icon">
         MacOS
-      </button>
-      <button class="platform-btn">
+      </a>
+      <a href="#" class="platform-btn">
         <img src="icons/web.svg" alt="Web" class="icon">
         Web
-      </button>
+      </a>
     </div>
   </div>
 </body>
 
 
+
 </html>
+
 
 
 
