--- a/index.html
+++ b/index.html
@@ -1,41 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
-
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="style.css">
-
-  <base href="/sonar_web/">
-
   <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
-
-  <!-- iOS meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="sonar_app">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
-
-  <!-- Favicon -->
+  <title>Sonar App</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <base href="/sonar_web/">
   <link rel="icon" type="image/png" href="favicon.png"/>
-
-  <title>sonar_app</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -45,29 +16,27 @@
       <p class="subtitle">All platforms — one click away</p>
     </div>
     <div class="platforms">
-      <a href="https://github.com/fridgeee1029/sonar/raw/main/android/sonar_app.apk" class="platform-btn" download>
+      <a href="android.html" class="platform-btn">
         <img src="icons/android.svg" alt="Android" class="icon">
         Android
       </a>
-      <a href="https://github.com/fridgeee1029/sonar/raw/main/windows/sonar_app_windows.exe" class="platform-btn" download>
+      <a href="windows.html" class="platform-btn">
         <img src="icons/windows.svg" alt="Windows" class="icon">
         Windows
       </a>
-      <a href="https://github.com/fridgeee1029/sonar/raw/main/macos/sonar_app_macos.dmg" class="platform-btn" download>
+      <a href="macos.html" class="platform-btn">
         <img src="icons/apple.svg" alt="MacOS" class="icon">
         MacOS
       </a>
-      <a href="#" class="platform-btn">
+      <a href="web.html" class="platform-btn">
         <img src="icons/web.svg" alt="Web" class="icon">
         Web
       </a>
     </div>
   </div>
 </body>
-
-
-
 </html>
+
 
 
 
