--- a/android.html
+++ b/android.html
@@ -10,16 +10,16 @@
   <div class="center-content">
     <div class="left-block">
       <h1 class="main-title">Sonar App</h1>
-      <p class="subtitle">Android Edition</p>
+      <p class="subtitle" style="margin-bottom:20px;">Android Edition</p>
       <p style="color:#d9e6ff; margin-top:10px; font-size:1em;">
         Нажмите кнопку ниже, чтобы скачать приложение для Android:
       </p>
-      <a href="https://github.com/fridgeee1029/sonar/raw/main/android/sonar_app.apk" class="platform-btn" download style="margin-top:15px;">
+      <a href="https://github.com/fridgeee1029/sonar_web/releases/download/v1.0/app-release.apk" class="platform-btn" style="margin-top:15px;">
         <img src="icons/android.svg" alt="Android" class="icon">
         Скачать APK
       </a>
       <p style="font-size:0.95em; color:#b5c8ea; margin-top:18px;">
-        ⓘ После скачивания APK-файла, при установке на устройство может потребоваться разрешить <b>установку из неизвестных источников</b> в настройках безопасности.
+        ⓘ После скачивания APK-файла, при установке на устройстве может потребоваться разрешение на установку из неизвестных источников (это можно включить в настройках безопасности Android).
       </p>
     </div>
   </div>
