--- a/windows.html
+++ b/windows.html
@@ -10,19 +10,18 @@
   <div class="center-content">
     <div class="left-block">
       <h1 class="main-title">Sonar App</h1>
-      <p class="subtitle">Windows Edition</p>
+      <p class="subtitle" style="margin-bottom:20px;">Windows Edition</p>
       <p style="color:#d9e6ff; margin-top:10px; font-size:1em;">
         Нажмите кнопку ниже, чтобы скачать приложение для Windows:
       </p>
-      <a https://github.com/fridgeee1029/sonar_web/releases/download/v2.0/sonar_app.exe>
+      <a href="https://github.com/fridgeee1029/sonar_web/releases/download/v2.0/sonar_app.exe" class="platform-btn" style="margin-top:15px;">
         <img src="icons/windows.svg" alt="Windows" class="icon">
-        Скачать EXE
+        Скачать для Windows
       </a>
       <p style="font-size:0.95em; color:#b5c8ea; margin-top:18px;">
-        ⓘ После скачивания откройте файл <b>sonar_app_windows.exe</b> для установки Sonar App на ваш компьютер.
+        ⓘ После скачивания запустите установочный файл и следуйте инструкциям. Windows может запросить подтверждение безопасности.
       </p>
     </div>
   </div>
 </body>
 </html>
-
