--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <img src="icons/windows.svg" alt="Windows" class="icon">
         Windows
       </a>
-      <a href="macos.html" class="platform-btn">
-        <img src="icons/apple.svg" alt="MacOS" class="icon">
-        MacOS
+      <a href="linux.html" class="platform-btn">
+        <img src="icons/linux.svg" alt="Linux" class="icon">
+        Linux
       </a>
       <a href="web.html" class="platform-btn">
         <img src="icons/web.svg" alt="Web" class="icon">
@@ -36,6 +36,7 @@
   </div>
 </body>
 </html>
+
 
 
 
